--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn_to_React",
+  "name": "learn_to_webpack",
   "version": "1.0.0",
   "description": "",
   "main": "bundle.js",
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Shaadr/learn_to_React.git"
+    "url": "git+https://github.com/Shaadr/learn_to_webpack.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Shaadr/learn_to_React/issues"
+    "url": "https://github.com/Shaadr/learn_to_webpack/issues"
   },
-  "homepage": "https://github.com/Shaadr/learn_to_React#readme",
+  "homepage": "https://github.com/Shaadr/learn_to_webpack#readme",
   "devDependencies": {
     "lodash": "^4.17.4",
     "webpack": "^2.5.1"
